--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <input type="text" placeholder="text">
             <li>
                <button>Click</button>
+               <button>1</button>
             </li>
         </div>
   
